--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </div>
     <h1>CommandBlock</h1>
     <nav>
-      <a href="index.html">Home</a>
+      <a href="https://ssmg4.github.io/CommandBlock">Home</a>
       <a href="logo-history.html">Logo History</a>
       <a href="java-history.html">Java Versions</a>
       <a href="bedrock-history.html">Bedrock Versions</a>
