--- a/index.html
+++ b/index.html
@@ -13,17 +13,24 @@
     </div>
     <h1>CommandBlock</h1>
     <nav>
-      <a href="https://ssmg4.github.io/CommandBlock">Home</a>
-      <a href="logo-history.html">Logo History</a>
-      <a href="java-history.html">Java Versions</a>
-      <a href="bedrock-history.html">Bedrock Versions</a>
-      <a href="editions.html">Editions</a>
-      <a href="unofficial.html">Unofficial</a>
-      <a href="other.html">Other</a>
-      <a href="modding.html">Modding</a>
-      <a href="mods.html">Mods</a>
-      <a href="about.html">About</a>
-      <a href="wiki.html">Wiki</a>
+<a href="https://ssmg4.github.io/CommandBlock">Home</a>
+
+<div class="dropdown">
+  <button class="dropbtn">More</button>
+  <div class="dropdown-content">
+    <a href="logo-history.html">Logo History</a>
+    <a href="java-history.html">Java Versions</a>
+    <a href="bedrock-history.html">Bedrock Versions</a>
+    <a href="editions.html">Editions</a>
+    <a href="unofficial.html">Unofficial</a>
+    <a href="other.html">Other</a>
+    <a href="modding.html">Modding</a>
+    <a href="mods.html">Mods</a>
+  </div>
+</div>
+
+<a href="about.html">About</a>
+<a href="wiki.html">Wiki</a>
     </nav>
     <div class="header-controls">
       <select id="theme-switcher" aria-label="Theme">
@@ -44,7 +51,7 @@
 
   <main>
     <section>
-      <h2>Welcome to CommandBlock</h2>
+      <h2>Welcome to CommandBlock!</h2>
       <p>
         The most complete Minecraft information library. Explore version histories, logo archives, modding guides, and more!
       </p>
