--- a/index.html
+++ b/index.html
@@ -8,29 +8,32 @@
 </head>
 <body>
   <header>
-    <div class="logo-container">
-      <img id="logo" src="assets/base.png" alt="Command Block Logo" width="48" height="48">
+    <div class="header-left">
+      <div class="logo-container">
+        <img id="logo" src="assets/base.png" alt="Command Block Logo" width="48" height="48">
+      </div>
+      <h1 class="site-title">CommandBlock</h1>
     </div>
-    <h1>CommandBlock</h1>
-    <nav>
-<a href="https://ssmg4.github.io/CommandBlock">Home</a>
-
-<div class="dropdown">
-  <button class="dropbtn">More</button>
-  <div class="dropdown-content">
-    <a href="logo-history.html">Logo History</a>
-    <a href="java-history.html">Java Versions</a>
-    <a href="bedrock-history.html">Bedrock Versions</a>
-    <a href="editions.html">Editions</a>
-    <a href="unofficial.html">Unofficial</a>
-    <a href="other.html">Other</a>
-    <a href="modding.html">Modding</a>
-    <a href="mods.html">Mods</a>
-  </div>
-</div>
-
-<a href="about.html">About</a>
-<a href="wiki.html">Wiki</a>
+    <nav class="header-nav">
+      <a href="https://ssmg4.github.io/CommandBlock">Home</a>
+      <div class="dropdown">
+        <button class="dropbtn" aria-expanded="false">
+          More
+          <span class="arrow"></span>
+        </button>
+        <div class="dropdown-content">
+          <a href="logo-history.html">Logo History</a>
+          <a href="java-history.html">Java Versions</a>
+          <a href="bedrock-history.html">Bedrock Versions</a>
+          <a href="editions.html">Editions</a>
+          <a href="unofficial.html">Unofficial</a>
+          <a href="other.html">Other</a>
+          <a href="modding.html">Modding</a>
+          <a href="mods.html">Mods</a>
+        </div>
+      </div>
+      <a href="about.html">About</a>
+      <a href="wiki.html">Wiki</a>
     </nav>
     <div class="header-controls">
       <select id="theme-switcher" aria-label="Theme">
@@ -63,6 +66,28 @@
     <p>&copy; 2025 CommandBlock | Unofficial Fan Project</p>
   </footer>
 
+  <script>
+    // Dropdown arrow rotation logic
+    document.addEventListener("DOMContentLoaded", function() {
+      const dropbtn = document.querySelector('.dropbtn');
+      const dropdown = document.querySelector('.dropdown-content');
+      const arrow = document.querySelector('.arrow');
+      dropbtn.addEventListener('click', function(e) {
+        e.preventDefault();
+        dropdown.classList.toggle('show');
+        dropbtn.setAttribute('aria-expanded', dropdown.classList.contains('show'));
+        arrow.classList.toggle('open');
+      });
+      // Close dropdown when clicking outside
+      document.addEventListener('click', function(e) {
+        if (!dropbtn.contains(e.target) && !dropdown.contains(e.target)) {
+          dropdown.classList.remove('show');
+          arrow.classList.remove('open');
+          dropbtn.setAttribute('aria-expanded', 'false');
+        }
+      });
+    });
+  </script>
   <script src="scripts/main.js"></script>
 </body>
 </html>
