--- a/about.html
+++ b/about.html
@@ -8,22 +8,31 @@
 </head>
 <body>
   <header>
-    <!-- Reuse your header from index.html -->
-    <div class="logo-container">
-      <img id="logo" src="assets/base.png" alt="Command Block Logo" width="48" height="48">
+    <div class="header-left">
+      <div class="logo-container">
+        <img id="logo" src="assets/base.png" alt="Command Block Logo" width="48" height="48">
+      </div>
+      <h1 class="site-title">CommandBlock</h1>
     </div>
-    <h1>CommandBlock</h1>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="logo-history.html">Logo History</a>
-      <a href="java-history.html">Java Versions</a>
-      <a href="bedrock-history.html">Bedrock Versions</a>
-      <a href="editions.html">Editions</a>
-      <a href="unofficial.html">Unofficial</a>
-      <a href="other.html">Other</a>
-      <a href="modding.html">Modding</a>
-      <a href="mods.html">Mods</a>
-      <a href="about.html" style="font-weight:bold;text-decoration:underline;">About</a>
+    <nav class="header-nav">
+      <a href="https://ssmg4.github.io/CommandBlock">Home</a>
+      <div class="dropdown">
+        <button class="dropbtn" aria-expanded="false">
+          More
+          <span class="arrow"></span>
+        </button>
+        <div class="dropdown-content">
+          <a href="logo-history.html">Logo History</a>
+          <a href="java-history.html">Java Versions</a>
+          <a href="bedrock-history.html">Bedrock Versions</a>
+          <a href="editions.html">Editions</a>
+          <a href="unofficial.html">Unofficial</a>
+          <a href="other.html">Other</a>
+          <a href="modding.html">Modding</a>
+          <a href="mods.html">Mods</a>
+        </div>
+      </div>
+      <a href="about.html">About</a>
       <a href="wiki.html">Wiki</a>
     </nav>
     <div class="header-controls">
